0.1730
    - insert method's id option is DEPRECATED!
    - fixed id option bug when column name is anbiguous
0.1729
    - dbi_option attribute is renamed to option, dbi_option is DEPRECATED!
    - default_dbi_option is renamed to default_option, default_dbi_option
      is DEPRECATED!
0.1728
    - added {key => ..., value => ...} syntax to DBIx::Custom::Mapper map method
      ,and argument of string and code reference is DEPRECATED!
    - update_param is DEPRECATED, use assing_clause instead.
    - assing_param is renamed to assing_clause, assing_param is DEPRECATED!
    - insert_param is renamed to values_clause, insert_param is DEPRECATED!
0.1727
    - improved join clause parsing
0.1726
    - improved join clause parsing
0.1725
    - improved join clause parsing
0.1724
    - added EXPERIMENTAL like_value method to DBIx::Custom
    - sqlfilter option is renamed to after_build_sql, sqlfilter is DEPRECATED!
    - removed EXPERIMENTAL flag from DBIx::Custom::Mapper
    - removed EXPERIMENTAL flag from the following DBIx::Custom methods
    insert_timestamp, mapper, update_timestamp
    - removed EXPERIMENTAL flag from the following DBIx::Custom method's option
    timestamp, 
0.1723
    - removed EXPERIMENTAL call_dbi method from DBIx::Custom::Model
    - removed EXPERIMENTAL map_param method from DBIx::Custom
    - removed EXPERIMENTAL the following methods from DBIx::Custom::Where
      if, map
    - removed EXPERIMENTAL flag from the following DBIx::Custom::Model methods
      count, execute
    - removed EXPERIMENTAL flag from the following DBIx::Custom::Result mehotds
      filter_on, type_rule, type_rule_off, type_rule_on, type_rule1_off,
      type_rule1_on, type_rule2_off, type_rule2_on
    - removed EXPERIMENTAL flag from the following DBIx::Custom method's options
      sqlfilter, type_rule_off, type_rule1_off, type_rule2_off,
      table_alias, wrap
    - removed EXPERIMENTAL flag from DBIx::Custom::Order