@@ -1,4 +1,7 @@
 0.1730
+    - method method of DBIx::Custom::Model is renamed to helper,
+      method is DEPRECATED!
+    - method method is renamed to helper, method is DEPRECATED!
     - insert method's id option is DEPRECATED!
     - fixed id option bug when column name is anbiguous
 0.1729
